[package]
name = "particle_life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
egui-macroquad = { git = "https://github.com/optozorax/egui-macroquad.git" }
rand = "0.8.5"
rayon = "1.7.0"
macroquad = "0.4.4"
